Implement prot and bct death buttons

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -21,6 +21,12 @@
 					<li>Living bacteria: <span id="bctNum">0</span></li>
 				</ul>
 
+				<input type="button" id="killProt" value="Kill all protozoa">
+				<input type="button" id="killBct" value="Kill all bacteria">
+
+				<br>
+				<br>
+
 				<label>Average genome</label>
 				<ul id="avgGen"></ul>
 			</section>
