Stop/step/resume buttons

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -16,6 +16,10 @@
 
 		<main>
 			<section id="stats">
+				<input type="button" id="stop" value="Stop">
+				<input type="button" id="step" value="Step">
+				<input type="button" id="resume" value="Resume">
+
 				<ul>
 					<li>Living protozoa: <span id="protNum">0</span></li>
 					<li>Living bacteria: <span id="bctNum">0</span></li>
