--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -33,6 +33,13 @@
 
 				<label>Average genome</label>
 				<ul id="avgGen"></ul>
+
+				<label>Hardcode user genome</label>
+				<br>
+				<input type="checkbox" id="useUserGen">
+				<label for="useUserGen">Active</label>
+
+				<ul id="userGenome"></ul>
 			</section>
 
 			<section id="config">
