Inputs for setting user gene numbers

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -39,7 +39,7 @@
 				<input type="checkbox" id="useUserGen">
 				<label for="useUserGen">Active</label>
 
-				<ul id="userGenome"></ul>
+				<ul id="userGen"></ul>
 			</section>
 
 			<section id="config">
