Protozoa spawning button

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -40,6 +40,14 @@
 				<label for="useUserGen">Active</label>
 
 				<ul id="userGen"></ul>
+
+				<label for="protStart">n =</label>
+				<input id="protStart" type="number" value="0">
+
+				<br>
+				<br>
+
+				<input type="button" id="protCenter" value="Spawn n protozoa (center)">
 			</section>
 
 			<section id="config">
