Allow configuration of prot start energy

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -41,11 +41,16 @@
 
 				<ul id="userGen"></ul>
 
-				<label for="protStart">n =</label>
-				<input id="protStart" type="number" value="0">
-
-				<br>
-				<br>
+				<ul>
+					<li>
+						<label for="protStartEnergy">Protozoa spawn energy</label>
+						<input id="protStartEnergy" type="number" value="0">
+					</li>
+					<li>
+						<label for="protStart">n =</label>
+						<input id="protStart" type="number" value="0">
+					</li>
+				</ul>
 
 				<input type="button" id="protCenter" value="Spawn n protozoa (center)">
 			</section>
