Add more spawn position patterns

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -53,6 +53,10 @@
 				</ul>
 
 				<input type="button" id="protCenter" value="Spawn n protozoa (center)">
+				<br>
+				<input type="button" id="protRandom" value="Spawn n protozoa (random)">
+				<br>
+				<input type="button" id="protLines" value="Spawn n protozoa (lines)">
 			</section>
 
 			<section id="config">
