Add bacteria spawn selection

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -115,6 +115,14 @@
 						<label for="bctMax">Max number of alive bacteria</label>
 						<input id="bctMax" type="number" value="0">
 					</li>
+					<li>
+						<label for="bctPattern">Bacteria spawn pattern</label>
+						<select id="bctPattern">
+							<option value="random">Random</option>
+							<option value="circle">Circle</option>
+							<option value="lines">Lines</option>
+						</select>
+					</li>
 				</ul>
 			</section>
 		</main>
