Make mutation rate and variance configurable

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -104,6 +104,14 @@
 						<label for="bctEnergy">Energy change from consuming a bacterium</label>
 						<input id="bctEnergy" type="number" value="0">
 					</li>
+					<li>
+						<label for="mutRate">Gene mutation rate</label>
+						<input id="mutRate" type="number" value="0">
+					</li>
+					<li>
+						<label for="mutVar">Gene mutation variance</label>
+						<input id="mutVar" type="number" value="0">
+					</li>
 				</ul>
 
 				<ul>
