Remove default HTML values

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -44,11 +44,11 @@
 				<ul>
 					<li>
 						<label for="protStartEnergy">Protozoa spawn energy</label>
-						<input id="protStartEnergy" type="number" value="0">
+						<input id="protStartEnergy" type="number">
 					</li>
 					<li>
 						<label for="protStart">n =</label>
-						<input id="protStart" type="number" value="0">
+						<input id="protStart" type="number">
 					</li>
 				</ul>
 
@@ -63,65 +63,65 @@
 				<ul>
 					<li>
 						<label for="pxScale">Pixel scale</label>
-						<input id="pxScale" type="number" value="0">
+						<input id="pxScale" type="number">
 					</li>
 					<li>
 						<label for="width">Width (cells)</label>
-						<input id="width" type="number" value="0">
+						<input id="width" type="number">
 					</li>
 					<li>
 						<label for="height">Height (cells)</label>
-						<input id="height" type="number" value="0">
+						<input id="height" type="number">
 					</li>
 					<li>
 						<label for="stepLength">Duration of one step (ms)</label>
-						<input id="stepLength" type="number" value="0">
+						<input id="stepLength" type="number">
 					</li>
 				</ul>
 
 				<ul>
 					<li>
 						<label for="stepEnergy">Protozoa base energy change per step</label>
-						<input id="stepEnergy" type="number" value="0">
+						<input id="stepEnergy" type="number">
 					</li>
 					<li>
 						<label for="rotEnergyMul">Protozoa rotation energy change multiplier</label>
-						<input id="rotEnergyMul" type="number" value="0">
+						<input id="rotEnergyMul" type="number">
 					</li>
 					<li>
 						<label for="protMax">Max number of alive protozoa</label>
-						<input id="protMax" type="number" value="0">
+						<input id="protMax" type="number">
 					</li>
 					<li>
 						<label for="protMaxEnergy">Energy cap for protozoa</label>
-						<input id="protMaxEnergy" type="number" value="0">
+						<input id="protMaxEnergy" type="number">
 					</li>
 					<li>
 						<label for="protRepEnergy">Energy required for protozoa to reproduce</label>
-						<input id="protRepEnergy" type="number" value="0">
+						<input id="protRepEnergy" type="number">
 					</li>
 					<li>
 						<label for="bctEnergy">Energy change from consuming a bacterium</label>
-						<input id="bctEnergy" type="number" value="0">
+						<input id="bctEnergy" type="number">
 					</li>
 					<li>
 						<label for="mutRate">Gene mutation rate</label>
-						<input id="mutRate" type="number" value="0">
+						<input id="mutRate" type="number">
 					</li>
 					<li>
 						<label for="mutVar">Gene mutation variance</label>
-						<input id="mutVar" type="number" value="0">
+						<input id="mutVar" type="number">
 					</li>
 				</ul>
 
 				<ul>
 					<li>
 						<label for="bctSpawn">Bacteria spawn per step</label>
-						<input id="bctSpawn" type="number" value="0">
+						<input id="bctSpawn" type="number">
 					</li>
 					<li>
 						<label for="bctMax">Max number of alive bacteria</label>
-						<input id="bctMax" type="number" value="0">
+						<input id="bctMax" type="number">
 					</li>
 					<li>
 						<label for="bctPattern">Bacteria spawn pattern</label>
