Add tools/ link to simulation/

--- a/tools/index.html
+++ b/tools/index.html
@@ -13,6 +13,13 @@
 		<p>These are some small JavaScript scripts.</p>
 
 		<ul>
+			<li><a href="simulation/">Simulation</a></li>
+			<p>This is a basic evolutionary simulation that I made for my
+			summative English assignment. The logical model of the psychologies
+			of the protozoa is too simple to create any particularly interesting
+			patterns, but the different species colours at least make it
+			sometimes look kind of visually appealing.</p>
+
 			<li><a href="asciimath/">AsciiMath but with newlines</a></li>
 			<p>AsciiMath is a really convenient alternative to LaTeX for most
 			of my use cases, but its live demo doesn't support line breaks. This
