Add bar payout text

--- a/tools/dm-uno/index.html
+++ b/tools/dm-uno/index.html
@@ -6,15 +6,33 @@
 	</head>
 	<body>
 		<section id="spinner">
-			<div class="colour" id="colour-0"></div>
-			<div class="colour" id="colour-1"></div>
-			<div class="colour" id="colour-2"></div>
-			<div class="colour" id="colour-3"></div>
-			<div class="colour" id="colour-4"></div> <!-- Center -->
-			<div class="colour" id="colour-5"></div>
-			<div class="colour" id="colour-6"></div>
-			<div class="colour" id="colour-7"></div>
-			<div class="colour" id="colour-8"></div>
+			<div class="colour" id="colour-0">
+				<p>-4: Earn $10</p>
+			</div>
+			<div class="colour" id="colour-1">
+				<p>-3: Earn $15</p>
+			</div>
+			<div class="colour" id="colour-2">
+				<p>-2: Earn $20</p>
+			</div>
+			<div class="colour" id="colour-3">
+				<p>-1: Earn $30</p>
+			</div>
+			<div class="colour" id="colour-4">
+				<p>0: Jackpot!</p>
+			</div>
+			<div class="colour" id="colour-5">
+				<p>+1: Earn $30</p>
+			</div>
+			<div class="colour" id="colour-6">
+				<p>+2: Earn $20</p>
+			</div>
+			<div class="colour" id="colour-7">
+				<p>+3: Earn $15</p>
+			</div>
+			<div class="colour" id="colour-8">
+				<p>+4: Earn $10</p>
+			</div>
 
 			<button id="spin">Spin!</button>
 		</section>
