Basic highlighting system

--- a/tools/dm-uno/index.html
+++ b/tools/dm-uno/index.html
@@ -41,5 +41,7 @@
 			<h3>Jackpot: Win $120 of game money, and a real $50 CAD!</h3>
 			<img src="card.png">
 		</div>
+
+		<script src="main.js"></script>
 	</body>
 </html>
