tools/index.html: Add unix_time stream link

--- a/tools/index.html
+++ b/tools/index.html
@@ -27,8 +27,9 @@
 
 			<li><a href="epoch/">Unix/Epoch time conversions</a></li>
 			<p>This lets you convert between Unix time and normal time. It would
-			have been better as a CLI, but I felt like implementing it in JavaScript
-			for some reason.</p>
+			have been better as a
+			<a href="https://www.youtube.com/watch?v=njBvWJkZcPo">CLI</a>, but I
+			felt like implementing it in JavaScript for some reason.</p>
 
 			<li>
 				<a href="wc/">Word Counter</a>
