update links after hugo move

--- a/tools/index.html
+++ b/tools/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="/sakura.css" rel="stylesheet">
+		<link href="/static/sakura.css" rel="stylesheet">
 
 		<title>Tools</title>
 	</head>
 
 	<body>
 		<h1>Tools</h1>
-
-		<p>These are some small JavaScript scripts.</p>
 
 		<ul>
 			<li><a href="simulation/">Simulation</a></li>
@@ -44,6 +42,8 @@
 			<p>This is a calculator for finding new values of 2D coordinates
 			based on a 2x2 linear transformation matrix.</>
 		</ul>
+
+		<p>See also: <a href="/games/">JS games I made for CS classes</a></p>
 
 		<a href="/">Home</a>
 	</body>
