--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="/sakura.css" rel="stylesheet">
+		<link href="/static/sakura.css" rel="stylesheet">
 
 		<title>Games</title>
 	</head>
