Add Irithyll link to tools page
Co-Authored-By: Hinata <veil@sucralose.moe>

--- a/tools/index.html
+++ b/tools/index.html
@@ -11,6 +11,9 @@
 		<h1>Tools</h1>
 
 		<ul>
+			<li><a href="/irithyll/">Irithyll 🩸</a></li>
+			<p>Canvas-based mathematical pattern visualization</p>
+
 			<li><a href="simulation/">Simulation</a></li>
 			<p>This is a basic evolutionary simulation that I made for my
 			summative English assignment. The logical model of the psychologies
