update irithyll description

--- a/tools/index.html
+++ b/tools/index.html
@@ -12,7 +12,7 @@
 
 		<ul>
 			<li><a href="/irithyll/">Irithyll 🩸</a></li>
-			<p>Canvas-based mathematical pattern visualization</p>
+			<p>Canvas-based 2D geometrical pattern visualization</p>
 
 			<li><a href="simulation/">Simulation</a></li>
 			<p>This is a basic evolutionary simulation that I made for my
