feat: add simple notepad tool
Adds a new single-page application under /tools/notepad/.
This tool provides a simple, persistent textarea with features like theme and font selection, and basic code-editing keyboard support (tab and auto-indent).

A link to the new tool is added to the main tools index page.

Co-Authored-By: Hinata <veil@sucralose.moe>

--- a/tools/index.html
+++ b/tools/index.html
@@ -11,6 +11,9 @@
 		<h1>Tools</h1>
 
 		<ul>
+			<li><a href="notepad/">textarea</a></li>
+			<p>Simple textarea with reasonable styling and intentation and no banner ads</p>
+
 			<li><a href="/irithyll/">Irithyll 🩸</a></li>
 			<p>Canvas-based 2D geometrical pattern visualization</p>
 
