--- a/tools/index.html
+++ b/tools/index.html
@@ -12,7 +12,7 @@
 
 		<ul>
 			<li><a href="notepad/">textarea</a></li>
-			<p>Simple textarea with reasonable styling and intentation and no banner ads</p>
+			<p>simple textarea with reasonable styling, saving, indentation. no banner ads</p>
 
 			<li><a href="/irithyll/">Irithyll 🩸</a></li>
 			<p>Canvas-based 2D geometrical pattern visualization</p>
